feat: ターミナルペインの増設（右側・埋め込み型）
- Rust 側で portable-pty を使った PTY 管理モジュールを追加
- フロントエンドに xterm.js ベースの TerminalPane コンポーネントを追加
- AppLayout にターミナルペインを右側配置（ドラッグリサイザー付き）
- Toolbar にターミナルトグルボタン、設定画面にターミナルセクションを追加
- ui-store にターミナル関連状態を追加（localStorage 永続化）
- i18n リソースにターミナル関連翻訳キーを追加（ja/en）

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.4",
     "react-virtuoso": "^4.18.1",
-    "zustand": "^5.0.11"
+    "zustand": "^5.0.11",
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.10.0"
   },
   "devDependencies": {
     "@playwright/cli": "^0.1.1",
