--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ walkdir = "2"
 trash = "5"
 chrono = { version = "0.4", features = ["serde"] }
 dirs = "6"
+portable-pty = "0.8"
 
 [dev-dependencies]
 tempfile = "3"
