--- a/package.json
+++ b/package.json
@@ -28,15 +28,16 @@
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.3.5",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-webgl": "^0.19.0",
+    "@xterm/xterm": "^5.5.0",
     "i18next": "^25.8.13",
     "lucide-react": "^0.575.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^16.5.4",
     "react-virtuoso": "^4.18.1",
-    "zustand": "^5.0.11",
-    "@xterm/xterm": "^5.5.0",
-    "@xterm/addon-fit": "^0.10.0"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@playwright/cli": "^0.1.1",
