feat: ターミナルペインの増設（右側・埋め込み型） (#57)
* feat: ターミナルペインの増設（右側・埋め込み型）

- Rust 側で portable-pty を使った PTY 管理モジュールを追加
- フロントエンドに xterm.js ベースの TerminalPane コンポーネントを追加
- AppLayout にターミナルペインを右側配置（ドラッグリサイザー付き）
- Toolbar にターミナルトグルボタン、設定画面にターミナルセクションを追加
- ui-store にターミナル関連状態を追加（localStorage 永続化）
- i18n リソースにターミナル関連翻訳キーを追加（ja/en）

* fix: xterm.js の初期化タイミングとテーマ色の解決を修正

- fit() を requestAnimationFrame で遅延実行し、レンダラー初期化完了を待つ
- CSS カスタムプロパティを getComputedStyle で解決してから渡す

* fix: xterm.js の内部 textarea が Tailwind リセットで露出する問題を修正

* fix: ターミナルの表示乱れ・リサイズ未反映・Claude Code ネスト検出を修正

- PTY 起動時に CLAUDECODE 環境変数を除去（ネストセッションエラー回避）
- convertEol を無効化（PTY の改行を二重変換して表示が乱れる問題）
- ドラッグリサイズ時に fitAddon.fit() を再実行して再描画
- width props を追加しペイン幅変更を検知

* fix: PTY を fit 後の正しい cols/rows で起動するよう初期化順序を修正

fit を requestAnimationFrame で待ってから terminalSpawn を呼ぶことで、
PTY のカラム数とxterm.js の表示幅が一致し、ls 等の出力が崩れなくなる

* fix: ターミナルの色表示改善・トグルでセッション維持

- TERM=xterm-256color を設定し TUI アプリの色・描画が正しく動作
- ANSI 16色テーマを追加（Catppuccin ベース）
- トグル時に条件付きレンダリングから CSS 非表示に変更しセッション維持
- 表示復帰時に fitAddon.fit() を再実行

* fix: ターミナルのリサイズ上限をウィンドウ幅50%に変更・ヘッダー改善

- ドラッグリサイズの上限を固定800pxからウィンドウ幅の50%に変更
- ターミナルヘッダーをコンパクト化（h-7, 小さいフォント、uppercase）

* feat: xterm.js WebGL レンダラーで GPU アクセラレーション有効化

- @xterm/addon-webgl を追加し Canvas から WebGL2 レンダリングに切替
- テキスト描画がシャープになりスクロール・リサイズも高速化
- WebGL2 非対応環境では自動で Canvas にフォールバック
- コンテキスト喪失時の自動復旧ハンドラを追加

* fix: WebGL addon の dispose クラッシュを修正

WebGL addon の内部状態が未初期化のまま dispose されると
_isDisposed エラーが発生する問題を修正。
addon を個別に管理し、Terminal.dispose() 前に安全に解放する。

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.3.5",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-webgl": "^0.19.0",
+    "@xterm/xterm": "^5.5.0",
     "i18next": "^25.8.13",
     "lucide-react": "^0.575.0",
     "react": "^19.1.0",
